--- a/views/about.ejs
+++ b/views/about.ejs
@@ -8,14 +8,10 @@
 </head>
 
 <body>
-    <div>
+    <div class="container">
         <h3>About me</h3>
-        <p>
-            Quae autem in beatae est repellendus sed enim maxime. Non nihil asperiores labore. Quasi unde dolores.
-            Dolores omnis quidem voluptatum. Corrupti eveniet aut vitae incidunt sed quis ut id. Aut sit voluptatem ut
-            voluptatem nulla labore corporis sequi harum.
-        </p>
-    </div>
-</body>
-
-</html>
+        <div class="row">
+            <div class="our vision col-4">
+                <img src="" alt="">
+            </div>
+        </div>
