--- a/views/news.ejs
+++ b/views/news.ejs
@@ -9,9 +9,11 @@
 </head>
 
 <body>
-    <h1>Berita Terkini Sekitar Erupsi Gunung Merapi</h1>
+    <h2>Berita Terkini Sekitar Erupsi Gunung Merapi</h2>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam, et! Natus illum harum odit expedita eius
-        laborum, itaque quasi? Ad reprehenderit eum accusamus officia excepturi laborum sequi aperiam rerum nostrum.</p>
+        laborum, itaque quasi? Ad reprehenderit eum accusamus officia excepturi laborum sequi aperiam rerum nostrum.
+    </p>
+    <h2></h2>
     <a href="/about">Go to about</a>
     <script src="script.js"></script>
 </body>
