--- a/views/404.ejs
+++ b/views/404.ejs
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    <h1>Your requested File not found</h1>
+    <p> We are sorry, the page your requested could not be found. Please go back to the homepage</p>
+    <button class="btn-home btn-primary"> <a href="/">Go Back Home</a> </button>
 </body>
 
 </html>
