--- a/views/nbencana.ejs
+++ b/views/nbencana.ejs
@@ -9,11 +9,15 @@
 </head>
 
 <body>
-    <h2>Berita Terkini Sekitar Erupsi Gunung Merapi</h2>
+    <h2>Erupsi Gunung Merapi</h2>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam, et! Natus illum harum odit expedita eius
         laborum, itaque quasi? Ad reprehenderit eum accusamus officia excepturi laborum sequi aperiam rerum nostrum.
     </p>
-    <h2></h2>
+    <h2>Badminton Indonesia kembali meraih kemenangan</h2>
+    <p>Ut dolorem corporis facere autem quidem. Enim accusantium repudiandae magnam quo qui omnis voluptas. Sunt
+        assumenda iste repellendus. Eius suscipit tenetur explicabo ducimus et. Ut asperiores officiis et. Magni vel
+        deleniti quia esse in.
+    </p>
     <a href="/about">Go to about</a>
     <script src="script.js"></script>
 </body>
