add header and footer

--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <title>Not Found Page</title>
-</head>
+  </head>
 
-<body>
-    <p> We are sorry, the page your requested could not be found. Please go back to the homepage</p>
-    <button class="btn-home btn-primary"> <a href="/">Go Back Home</a> </button>
-</body>
-
+  <body>
+    <p>
+      We are sorry, the page your requested could not be found. Please go back
+      to the homepage
+    </p>
+    <button class="btn-home btn-primary"><a href="/">Go Back Home</a></button>
+  </body>
 </html>
