--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="container">
-        <h3>About me</h3>
-        <div class="row">
-            <div class="our vision col-4">
-                <img src="" alt="">
-            </div>
+      <h3>About me</h3>
+      <div class="row">
+        <div class="our vision col-4">
+          <img src="" alt="" />
         </div>
+      </div>
+    </div>
+  </body>
+</html>
