including css file on header and footer

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,3 +1,7 @@
+<!-- including CSS file -->
+<link rel="stylesheet" href="style.css" />
+
+<!-- Footer Content-->
 <footer class="section-footer mt-5 mb-4 border-top">
   <div class="container pt-5 pb-5">
     <div class="row justify-content-center">
