--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,3 +1,6 @@
+<!-- including CSS file -->
+<link rel="stylesheet" href="style.css" />
+
 <!--Navbar-->
 <div class="container">
   <nav class="row navbar navbar-expand-lg navbar-light bg-white">
