--- a/views/nbencana.ejs
+++ b/views/nbencana.ejs
@@ -4,20 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Berita Terkini</title>
+    <title>Bencana Alam</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h2>Erupsi Gunung Merapi</h2>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam, et! Natus illum harum odit expedita eius
+    <img src="erupsi-gunung-merapi.jpeg" alt="img" class="img-custom">
+    <h1>Erupsi Gunung Merapi</h1>
+    <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam, et! Natus illum harum odit expedita eius
         laborum, itaque quasi? Ad reprehenderit eum accusamus officia excepturi laborum sequi aperiam rerum nostrum.
     </p>
-    <h2>Badminton Indonesia kembali meraih kemenangan</h2>
-    <p>Ut dolorem corporis facere autem quidem. Enim accusantium repudiandae magnam quo qui omnis voluptas. Sunt
-        assumenda iste repellendus. Eius suscipit tenetur explicabo ducimus et. Ut asperiores officiis et. Magni vel
-        deleniti quia esse in.
+    <p>
+        Qui eum quis. Quibusdam ullam rerum delectus fugiat amet molestiae. Et corrupti sed ipsam unde est eos qui
+        veritatis. Explicabo est dolore. Voluptate amet et officia aspernatur odit et earum autem velit. Occaecati et
+        cum et facere voluptatem sed.
     </p>
+
     <a href="/about">Go to about</a>
     <script src="script.js"></script>
 </body>
