menambah fitur deteksi jumlah pengunjung

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,9 +9,12 @@
 
 <body>
     <h1>Anonym News</h1>
-    <h3>selamat datang di situs berita
-        <br>terlengkap dan terupdate sekecamatan
+    <h3>Selamat datang di situs berita No.1
+        <br><i>terlengkap</i> dan <i>terupdate</i> di SYNRGY Academy
     </h3>
+    <h5>
+        <%= counter %> kali dikunjungi pada hari ini
+    </h5>
 
     <% for( let i=0; i < news.length; i++ ) { %>
         <p>
