--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,19 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About</title>
-  </head>
 
-  <body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About</title>
+  <link rel="stylesheet" href="style2.css">
+</head>
+
+<body>
+  <%- include('header') %>
     <div class="container">
-      <h3>About me</h3>
-      <div class="row">
-        <div class="our vision col-4">
-          <img src="" alt="" />
+      <!-- parallax -->
+      <div class="parallax">
+        <div class="caption">
+          <span class="border">TRINEWS</span>
         </div>
       </div>
-    </div>
-  </body>
+
+      <!-- about me -->
+      <div class="aboutme">
+        <p>Dolorem et laborum non ut voluptatum et consequatur est. Consectetur voluptatem qui sit et id incidunt.
+          Quis voluptatem earum blanditiis accusantium quis qui sunt et. Illum sequi sed quae. Asperiores rerum et
+          consequuntur ut unde quasi. Adipisci enim in molestiae assumenda quos.</p>
+      </div>
+      <!-- akhir about me -->
+      <br><br><br>
+      <!-- bio -->
+      <div class="row padded-block">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+          <div class="row">
+            <div class="col-md-6 no-pads">
+              <img src="image4.png" alt="" width="300px" class="img-fluid">
+            </div>
+            <div class="col-md-6 padded-text">
+              <h2>Reyhan Alya Chaerul</h2>
+              <p>Velit voluptatibus et repudiandae.</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6 padded-text">
+              <h2>Abdur Rohim</h2>
+              <p>Repellat non earum fugit maxime nihil est repellendus.</p>
+            </div>
+            <div class="col-md-6 no-pads">
+              <img src="image2.png" alt="" width="300px" class="img-fluid">
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6 no-pads">
+              <img src="image3.png" alt="" width="300px" class="img-fluid">
+            </div>
+            <div class="col-md-6 padded-text">
+              <h2>Dwiky Loki</h2>
+              <p>Libero non qui voluptas et est eligendi id reprehenderit.</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6 padded-text">
+              <h2>Faisal Juliandra</h2>
+              <p>Molestiae qui ut cumque animi odit omnis.</p>
+            </div>
+            <div class="col-md-6 no-pads">
+              <img src="image1.png" alt="" width="300px" class="img-fluid">
+            </div>
+          </div>
+        </div>
+        <!-- akhir bio -->
+        <br><br><br>
+      </div>
+      <%- include('footer') %>
+</body>
+
 </html>
