--- a/views/style2.css
+++ b/views/style2.css
@@ -7,7 +7,7 @@ body {
 .parallax {
   background-image: url("newstypo.jpg");
 
-  height: 500px;
+  height: 300px;
 
   background-attachment: fixed;
   background-position: center;
@@ -39,8 +39,20 @@ body {
     padding: 20px 20px 20px 20px;
 }
 
-.about2,
-.about3 {
+.padded-text {
     background-color: bisque;
     font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+p {
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
 }
