--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,31 +4,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style2.css">
+    <title>Home Page</title>
 </head>
 
 <body>
-    <h1>Selamat Datang
-        <br>di trinews
-    </h1>
+    <%- include('header') %>
+        <h1>Selamat Datang
+            <br>di trinews
+        </h1>
 
-    <h3>Situs berita No.1
-        <br>terlengkap dan terupdate
-        <br>di SYNRGY Academy
-    </h3>
+        <h3>Situs berita No.1
+            <br>terlengkap dan terupdate
+            <br>di SYNRGY Academy
+        </h3>
 
-    <% for( let i=0; i < news.length; i++ ) { %>
-        <p>
-            <a href="<%= news[i] %>">
-                <%= title[i] %>
-            </a>
-            <% } %>
-        </p>
-        <h5>
-            <%= counter %> kali dikunjungi pada hari ini
-        </h5>
+        <% for( let i=0; i < news.length; i++ ) { %>
+            <p>
+                <a href="<%= news[i] %>">
+                    <%= title[i] %>
+                </a>
+                <% } %>
+            </p>
+            <h5>
+                <%= counter %> kali dikunjungi pada hari ini
+            </h5>
+            <%- include('footer') %>
 
-        <!-- [ {title: "abc", image: "", paragraf: ""}, {}, {}] -->
+                <!-- [ {title: "abc", image: "", paragraf: ""}, {}, {}] -->
 </body>
 
 </html>
