--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -20,7 +20,7 @@
           <div class="col-12 col-lg-4">
             <h5>COMPANY</h5>
             <ul class="list-unstyled">
-              <li><a href="#"> About Us </a></li>
+              <li><a href="about"> About Us </a></li>
               <li><a href="#"> Adverstisement </a></li>
               <li><a href="#"> Help Center </a></li>
               <li><a href="#"> Media </a></li>
