Editing content finished

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,10 +40,8 @@
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis
                 minus impedit quas, voluptates veritatis debitis libero aperiam
                 facilis aliquam saepe accusamus minima in amet laboriosam, sint
-                natus dolorum expedita nulla. apasih fdjghjkdfhg jfhdjfhjdsfhk
-                fhdjhfjksd.
+                natus dolorum expedita nulla.
               </p>
-              <br />
               <br />
               <% } %>
           </div>
