--- a/views/about.ejs
+++ b/views/about.ejs
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Trinews</title>
   <link rel="stylesheet" href="style2.css">
+  <link rel="icon" href="trinews_favicon.jpg">
 </head>
 
 <body>
@@ -22,7 +23,8 @@
       <div class="aboutme">
         <p>Dolorem et laborum non ut voluptatum et consequatur est. Consectetur voluptatem qui sit et id incidunt.
           Quis voluptatem earum blanditiis accusantium quis qui sunt et. Illum sequi sed quae. Asperiores rerum et
-          consequuntur ut unde quasi. Adipisci enim in molestiae assumenda quos. Occaecati iste ut illum dolorum quam explicabo consectetur quam quo. 
+          consequuntur ut unde quasi. Adipisci enim in molestiae assumenda quos. Occaecati iste ut illum dolorum quam
+          explicabo consectetur quam quo.
           Aut iure rerum qui. Neque et quia sunt dolore eveniet labore omnis.</p>
       </div>
       <!-- akhir about me -->
