--- a/views/nbencana.ejs
+++ b/views/nbencana.ejs
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bencana Alam</title>
-    <link rel="stylesheet" href="style2.css" />
-  </head>
 
-  <body>
-    <%- include('header') %>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Bencana Alam</title>
+  <link rel="stylesheet" href="style2.css" />
+  <link rel="icon" href="trinews_favicon.jpg">
+</head>
+
+<body>
+  <%- include('header') %>
     <div class="bencana"></div>
     <div class="container">
       <div class="container pt-5 pb-5 mt-5 mb-4 border-top border-bottom">
@@ -35,5 +37,6 @@
       </p>
     </div>
     <%- include('footer') %>
-  </body>
+</body>
+
 </html>
