--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style2.css" />
-    <title>Trinews Site</title>
-  </head>
 
-  <body>
-    <%- include('header') %>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style2.css" />
+  <link rel="icon" href="trinews_favicon.jpg">
+  <title>Trinews Site</title>
+</head>
+
+<body>
+  <%- include('header') %>
 
     <div class="parallax-2">
       <div class="caption">
@@ -25,32 +27,35 @@
         <div class="row">
           <div class="col-md-6 no-pads border">
             <% for( let i=0; i < image.length; i++ ) { %>
-            <img src="<%= image[i] %>" width="300px" />
-            <% } %>
+              <img src="<%= image[i] %>" width="300px" />
+              <% } %>
           </div>
           <div class="col-md-6 no-pads border">
             <% for( let j=0; j < news.length; j++ ) { %>
-            <a href="<%= news[j] %>"> <%= title[j] %> </a>
-            <br />
-            <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis
-              minus impedit quas, voluptates veritatis debitis libero aperiam
-              facilis aliquam saepe accusamus minima in amet laboriosam, sint
-              natus dolorum expedita nulla. apasih fdjghjkdfhg jfhdjfhjdsfhk
-              fhdjhfjksd.
-            </p>
-            <br />
-            <br />
-            <% } %>
+              <a href="<%= news[j] %>">
+                <%= title[j] %>
+              </a>
+              <br />
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis
+                minus impedit quas, voluptates veritatis debitis libero aperiam
+                facilis aliquam saepe accusamus minima in amet laboriosam, sint
+                natus dolorum expedita nulla. apasih fdjghjkdfhg jfhdjfhjdsfhk
+                fhdjhfjksd.
+              </p>
+              <br />
+              <br />
+              <% } %>
           </div>
         </div>
       </div>
       <!-- akhir bio -->
       <h4 class="mt-5 mb-3">
         Anda telah mengunjungi Trinews sebanyak <%= counter %> kali pada hari
-        ini
+          ini
       </h4>
     </div>
     <%- include('footer') %>
-  </body>
+</body>
+
 </html>
