--- a/views/about.ejs
+++ b/views/about.ejs
@@ -24,9 +24,12 @@
         <p>Dolorem et laborum non ut voluptatum et consequatur est. Consectetur voluptatem qui sit et id incidunt.
           Quis voluptatem earum blanditiis accusantium quis qui sunt et. Illum sequi sed quae. Asperiores rerum et
           consequuntur ut unde quasi. Adipisci enim in molestiae assumenda quos. Occaecati iste ut illum dolorum quam
-          explicabo consectetur quam quo.
-          Aut iure rerum qui. Neque et quia sunt dolore eveniet labore omnis.</p>
+          explicabo consectetur quam quo. Aut iure rerum qui. Neque et quia sunt dolore eveniet labore omnis.Et dolorum similique rerum aut. Debitis culpa facilis deserunt deleniti rerum rerum non necessitatibus exercitationem. Iure tempora iste in id eum ipsum ea quisquam ex. Dolorem accusamus voluptatem. Autem qui in magnam molestiae consequatur officiis. Veritatis quo iure nam repudiandae quo incidunt consequatur voluptatum.</p>
       </div>
+
+      <div class="container pt-5 pb-5 mt-3 mb-3 border-top border-bottom">
+      <h3 class="">Our Publishers</h3>
+    </div>
       <!-- akhir about me -->
       <br><br><br>
       <!-- bio -->
@@ -39,7 +42,7 @@
             </div>
             <div class="col-md-6 padded-text">
               <h2>Rayhan Alya Chaerul</h2>
-              <p>Velit voluptatibus et repudiandae.</p>
+              <p>Odio quos quia nihil aut omnis.</p>
             </div>
           </div>
           <div class="row">
