--- a/views/404.ejs
+++ b/views/404.ejs
@@ -3,15 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style2.css" />
     <title>Not Found Page</title>
   </head>
 
   <body>
-    <p>
+    <%- include('header') %>
+    <h4 class="err-page text-center pt-5 pb-5 mb-3 mt-5 border-top">
       We are sorry, the page your requested could not be found. Please go back
       to the homepage
-    </p>
-    <button class="btn-home btn-primary"><a href="/">Go Back Home</a></button>
+    </h4>
+    <a href="/" class="link-home mt-2 mb-5 text-center"> Go Back Home</a>
   </body>
 </html>
