--- a/views/style2.css
+++ b/views/style2.css
@@ -10,7 +10,7 @@ h3 {
     color: #071c4d;
 }
 
-h4 {
+h6 {
     font-family: Verdana,
         Geneva,
         Tahoma,
@@ -23,6 +23,25 @@ p {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: #071c4d;
     text-align: justify;
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+
+.p-index {
+    font-family: Arial, Helvetica, sans-serif;
+    color: #071c4d;
+    text-align: justify;
+    font-size: medium;
+}
+
+.list-news {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: larger;
+    color: #071c4d;
+    font-weight: bolder;
 }
 
 .parallax {
@@ -106,10 +125,9 @@ p {
     justify-content: center;
 }
 
-p {
-    display: block;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
+
+.link-home {
+    color: #071c4d;
+    font-family: sans-serif;
+    font-size: 20px;
 }
